--- a/writeups.html
+++ b/writeups.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>InfoSec Writeups - Cybersecurity Articles</title>
-
+    <title>Penquin Writeups - Cybersecurity Articles</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="Style/writeups.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
     <nav class="navbar">
         <div class="navbar-container">
             <div class="logo">
-               <img src="images/watermelon-icon.jpg" alt="Watermelon Icon" class="watermelon-icon"> Watermelon Writeups
+               <img src="images/watermelon-icon.jpg" alt="Watermelon Icon" class="watermelon-icon"> Penquin Writeups
             </div>
             <ul class="nav-links">
                 <li><a href="#"></i> Home</a></li>
@@ -33,7 +33,7 @@
     </nav>
     <div class="container">
        <header>
-          <h1> Watermelon Writeups </h1>
+          <h1> InfoSec Writeups </h1>
           <p>Cutting-edge cybersecurity articles and tutorials for security professionals and bug hunters</p>
       </header>
 
