--- a/writeups.html
+++ b/writeups.html
@@ -17,7 +17,7 @@
     <nav class="navbar">
         <div class="navbar-container">
             <div class="logo">
-               <img src="images/watermelon-icon.jpg" alt="Watermelon Icon" class="watermelon-icon"> Penquin Writeups
+               <img src="images/Penquin.png" alt="Watermelon Icon" class="watermelon-icon"> Penquin
             </div>
             <ul class="nav-links">
                 <li><a href="#"></i> Home</a></li>
@@ -33,7 +33,7 @@
     </nav>
     <div class="container">
        <header>
-          <h1> InfoSec Writeups </h1>
+          <span> root@Penquin:~# </span><h> ls Writeups </h>
           <p>Cutting-edge cybersecurity articles and tutorials for security professionals and bug hunters</p>
       </header>
 
