--- a/writeups.html
+++ b/writeups.html
@@ -20,11 +20,8 @@
                <img src="images/Penquin.png" alt="Watermelon Icon" class="watermelon-icon"> Penquin
             </div>
             <ul class="nav-links">
-                <li><a href="#"></i> Home</a></li>
-                <li><a href="#"><i></i> Categories</a></li>
-                <li><a href="#"><i></i> Popular</a></li>
-                 <li><a href="#" class="active"></i>Writeups</a></li>
-                <li><a href="#"></i> About</a></li>
+                <li><a href="index"></i> Home</a></li>
+                 <li><a href="" class="active"></i>Writeups</a></li>
             </ul>
             <button class="mobile-menu-btn">
                 <i class="fas fa-bars"></i>
