--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Advanced Bug Hunting Toolkit - Project Index</title>
     <link rel="icon" type="image/x-icon" href="/api/placeholder/32/32">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="Style/Style.css">
+    <link rel="stylesheet" href="Style/style.css">
 </head>
 <body>
     <nav>
@@ -33,13 +33,12 @@
 
     <!-- Hero Section -->
     <section id="home" class="home">
+        <div class="content">
+            <h1 data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600"><span> root@Penquin:~# </span><h> cat Home.txt </h></h1>
+            <p data-aos="flip-up" data-aos-duration="1000" data-aos-delay="1000">Started programming at the age of 13, I got a keen interest towards Cyber Security and have explored multiple dimensions of it. I progressively worked on multiple technologies ranging from software to security, which gave me a brief exposure towards the industry. You can contact me for a coffee or to get your idea into code or to consult for your software, security needs .</p>
+        </div>
         <div class="home-img" data-aos="zoom-in" data-aos-duration="1200">
             <img src="images/Penquin.jpg" alt="Penquin Profile Photo">
-        </div>
-        <div class="content">
-            <h1 data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600"><span>Penquin</span></h1>
-            <p data-aos="flip-up" data-aos-duration="1000" data-aos-delay="1000">Started programming at the age of 13, I got a keen interest towards Cyber Security and have explored multiple dimensions of it. I progressively worked on multiple technologies ranging from software to security, which gave me a brief exposure towards the industry. You can contact me for a coffee or to get your idea into code or to consult for your software, security needs .</p>
-            
         </div>
     </section>
 
@@ -66,7 +65,7 @@
             <div class="stat-card">
                 <h3><i class="fas fa-book"></i> Security Writeups</h3>
                 <div class="stat-number">16+</div>
-                <div class="stat-description">In-depth tutorials and methodologiKrishes from InfoSec experts</div>
+                <div class="stat-description">In-depth tutorials and methodologies from InfoSec experts</div>
             </div>
         </div>
 
@@ -204,7 +203,7 @@
                     <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
                         <a href="https://github.com/coffinxp" style="color: var(--terminal-link); text-decoration: none;">
                             <i class="fab fa-github"></i> GitHub
-                        </a>
+                            </a>
                         <a href="https://youtube.com/@lostsecc" style="color: var(--terminal-link); text-decoration: none;">
                             <i class="fab fa-youtube"></i> YouTube
                         </a>
