--- a/writeups.html
+++ b/writeups.html
@@ -30,7 +30,7 @@
     </nav>
     <div class="container">
        <header>
-          <span> root@Penquin:~# </span><h> ls Writeups </h>
+          <span> root@Penquin:~# </span><h> cat Writeups.txt </h>
           <p>Cutting-edge cybersecurity articles and tutorials for security professionals and bug hunters</p>
       </header>
 
@@ -345,6 +345,6 @@
             document.body.appendChild(scanLine);
         });
     </script>
-    <script src="Script/writeups.js" defer></script>
+    <script src="Script/writeups1.js" defer></script>
 </body>
 </html>
