--- a/writeups.html
+++ b/writeups.html
@@ -21,7 +21,8 @@
             </div>
             <ul class="nav-links">
                 <li><a href="index"></i> Home</a></li>
-                 <li><a href="" class="active"></i>Writeups</a></li>
+                <li><a href="writeups" class="active"></i>Writeups</a></li>
+                <li><a href="extentions"></i> Extentions</a></li>
             </ul>
             <button class="mobile-menu-btn">
                 <i class="fas fa-bars"></i>
