--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Advanced Bug Hunting Toolkit - Project Index</title>
     <link rel="icon" type="image/x-icon" href="/api/placeholder/32/32">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="Style/Style1.css">
+    <link rel="stylesheet" href="Style/Style.css">
 </head>
 <body>
     <!-- Custom cursor elements -->
