--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <div class="nav-container">
             <div class="logo" data-aos="zoom-in" data-aos-duration="1000">
-                <img src="images/Penquin.png" alt="Penquin Icon" class="watermelon-icon"> Penquin
+                <img src="images/Penquin.png" alt="Penquin Icon" class="penquin-icon"> Penquin
             </div>
             <div class="links">
                 <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"><a
