--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             </div>
             <div class="links">
                 <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"><a
-                        href="#home">Home</a></div>
+                        href="index" class="active">Home</a></div>
                 <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200"><a
-                        href="#writeups">Writeups</a></div>
+                        href="Writeups">Writeups</a></div>
                 <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300"><a
-                        href="#extensions">Extensions</a></div>
+                        href="Extensions">Extensions</a></div>
             </div>
             <i class="fa-solid fa-bars hamburg" id="hamburg-btn"></i>
         </div>
@@ -138,6 +138,8 @@
                     streamline the reconnaissance and vulnerability discovery process for both beginners and experienced 
                     security professionals.
                 </p>
+                
+                
                 </div>
             </div>
         </div>
@@ -147,6 +149,9 @@
         <div class="terminal-footer">
             <p style="color: var(--terminal-secondary); font-style: italic;">
                 © 2025 Penquin - All rights reserved.
+            </p>
+            <p style="color: var(--terminal-accent); margin-top: 10px; font-size: 0.9rem;">
+                 <span id="current-date"></span>
             </p>
         </div>
     </footer>
